// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/progress/demo/circle.md correctly 1`] = `
<div>
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-normal c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-exception c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        <i
          class="icon icon-close"
        />
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-success c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        <i
          class="icon icon-check"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-dynamic.md correctly 1`] = `
<div>
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-normal c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="0"
          style="stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="c7n-btn-group"
  >
    <button
      class="c7n-btn c7n-btn-circle c7n-btn-icon-only c7n-btn-raised"
      type="button"
    >
      <i
        class="icon icon-remove"
      />
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-circle c7n-btn-icon-only c7n-btn-raised"
      type="button"
    >
      <i
        class="icon icon-add"
      />
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-mini.md correctly 1`] = `
<div>
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-normal c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:88.59291283123217px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-exception c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        <i
          class="icon icon-close"
        />
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-success c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        <i
          class="icon icon-check"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dashboard.md correctly 1`] = `
Array [
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-normal c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        75%
      </span>
    </div>
  </div>,
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-normal c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <div
        class="c7n-progress-pointer"
        style="transform:rotate(376.25deg)"
      >
        <svg
          height="32"
          viewBox="0 0 38 32"
          width="38"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="c7n-progress-status-pointer-normal"
            d="M103.371587,49.724578 C103.681687,50.1292204 103.634794,50.6951896 103.280961,51.0440945 L103.186137,51.1265795 L78.8502947,69.7769214 C79.5504585,70.8623565 79.9567807,72.1551739 79.9567807,73.5428929 C79.9567807,77.3850168 76.8421239,80.4996736 73,80.4996736 C69.1578761,80.4996736 66.0432193,77.3850168 66.0432193,73.5428929 C66.0432193,69.700769 69.1578761,66.5861122 73,66.5861122 C74.7317808,66.5861122 76.3157678,67.218893 77.5333601,68.265854 L101.969586,49.5391281 C102.407948,49.2031866 103.035646,49.2862154 103.371587,49.724578 Z M73,68.5861122 C70.2624456,68.5861122 68.0432193,70.8053385 68.0432193,73.5428929 C68.0432193,76.2804473 70.2624456,78.4996736 73,78.4996736 C75.7375544,78.4996736 77.9567807,76.2804473 77.9567807,73.5428929 C77.9567807,70.8053385 75.7375544,68.5861122 73,68.5861122 Z"
            fill="#6887E8"
            transform="translate(-66 -49)"
          />
        </svg>
      </div>
      <span
        class="c7n-progress-text-bottom"
      >
        75%
      </span>
    </div>
  </div>,
]
`;

exports[`renders ./components/progress/demo/dynamic.md correctly 1`] = `
<div>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-normal c7n-progress-show-info c7n-progress-default"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:0%;height:8px"
          />
        </div>
      </div>
      <span
        class="c7n-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="c7n-btn-group"
  >
    <button
      class="c7n-btn c7n-btn-circle c7n-btn-icon-only c7n-btn-raised"
      type="button"
    >
      <i
        class="icon icon-remove"
      />
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
    <button
      class="c7n-btn c7n-btn-circle c7n-btn-icon-only c7n-btn-raised"
      type="button"
    >
      <i
        class="icon icon-add"
      />
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/format.md correctly 1`] = `
<div>
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-normal c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        75 Days
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-circle c7n-progress-status-success c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="c7n-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="c7n-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;stroke:#f3f3f3"
        />
        <path
          class="c7n-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="c7n-progress-text"
      >
        Done
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line.md correctly 1`] = `
<div>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-normal c7n-progress-show-info c7n-progress-default"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:30%;height:8px"
          />
        </div>
      </div>
      <span
        class="c7n-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-active c7n-progress-show-info c7n-progress-default"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:50%;height:8px"
          />
        </div>
      </div>
      <span
        class="c7n-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-exception c7n-progress-show-info c7n-progress-default"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:70%;height:8px"
          />
        </div>
      </div>
      <span
        class="c7n-progress-text"
      >
        <i
          class="icon icon-cancel"
        />
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-success c7n-progress-show-info c7n-progress-default"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:100%;height:8px"
          />
        </div>
      </div>
      <span
        class="c7n-progress-text"
      >
        <i
          class="icon icon-check_circle"
        />
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-normal c7n-progress-default"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:50%;height:8px"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line-mini.md correctly 1`] = `
<div
  style="width:170px"
>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:30%;height:6px"
          />
        </div>
      </div>
      <span
        class="c7n-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-active c7n-progress-show-info c7n-progress-small"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:50%;height:6px"
          />
        </div>
      </div>
      <span
        class="c7n-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-exception c7n-progress-show-info c7n-progress-small"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:70%;height:6px"
          />
        </div>
      </div>
      <span
        class="c7n-progress-text"
      >
        <i
          class="icon icon-cancel"
        />
      </span>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-line c7n-progress-status-success c7n-progress-show-info c7n-progress-small"
  >
    <div>
      <div
        class="c7n-progress-outer"
      >
        <div
          class="c7n-progress-inner"
        >
          <div
            class="c7n-progress-bg"
            style="width:100%;height:6px"
          />
        </div>
      </div>
      <span
        class="c7n-progress-text"
      >
        <i
          class="icon icon-check_circle"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/loading.md correctly 1`] = `
<div>
  <div
    class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-small"
  >
    <div
      class="c7n-progress-inner"
    >
      <svg
        viewBox="0 0 50 50"
      >
        <circle
          cx="25"
          cy="25"
          r="20"
        />
      </svg>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-loading c7n-progress-status-success c7n-progress-show-info c7n-progress-default"
  >
    <div
      class="c7n-progress-inner"
    >
      <svg
        viewBox="0 0 50 50"
      >
        <circle
          cx="25"
          cy="25"
          r="20"
        />
      </svg>
    </div>
  </div>
  <div
    class="c7n-progress c7n-progress-loading c7n-progress-status-exception c7n-progress-show-info c7n-progress-large"
  >
    <div
      class="c7n-progress-inner"
    >
      <svg
        viewBox="0 0 50 50"
      >
        <circle
          cx="25"
          cy="25"
          r="20"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/segment.md correctly 1`] = `
<div
  class="c7n-progress c7n-progress-line c7n-progress-status-normal c7n-progress-show-info c7n-progress-default"
>
  <div>
    <div
      class="c7n-progress-outer"
    >
      <div
        class="c7n-progress-inner"
      >
        <div
          class="c7n-progress-bg"
          style="width:60%;height:8px"
        />
        <div
          class="c7n-progress-success-bg"
          style="width:30%;height:8px"
        />
      </div>
    </div>
    <span
      class="c7n-progress-text"
    >
      60%
    </span>
  </div>
</div>
`;
